Test/errors/err_alias_type_arg_rejected.cb
// `list<alias T*>` is now a valid pure-borrow element spelling, but `alias` still requires a
// pointer or interface element - a bare value element cannot be an alias. This pins that check.
import "list.cb";

expect_error("alias requires a pointer or interface type") {
    list<alias int> bad = default;
}
